Fix alignment of destinations title.

--- a/client/src/styles/components/_destination.scss
+++ b/client/src/styles/components/_destination.scss
@@ -47,6 +47,9 @@
   &__title {
     font-size: $font-size-large;
     margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    height: 100%;
 
     & > * {
       margin-right: 1rem;
